force-app-modified/main/default/objects/Partecipant__c/fields/Applied__c.field-meta.xml
<CustomField>
    <fullName>Applied__c</fullName>
    <defaultValue>true</defaultValue>
    <label>נרשם</label>
    <type>Checkbox</type>
</CustomField>