force-app-modified/main/default/objects/Partecipant__c/fields/book__c.field-meta.xml
<CustomField>
    <fullName>book__c</fullName>
    <defaultValue>false</defaultValue>
    <label>חוברת</label>
    <type>Checkbox</type>
</CustomField>