force-app-modified/main/default/objects/Partecipant__c/fields/flight__c.field-meta.xml
<CustomField>
    <fullName>flight__c</fullName>
    <defaultValue>false</defaultValue>
    <label>טיסה</label>
    <type>Checkbox</type>
</CustomField>