force-app-modified/main/default/objects/Partecipant__c/fields/GMDSS_test_date1__c.field-meta.xml
<CustomField>
    <fullName>GMDSS_test_date1__c</fullName>
    <label>תאריך מבחן GMDSS</label>
    <type>Date</type>
</CustomField>