force-app-modified/main/default/objects/Partecipant__c/fields/GreeceCourseDate__c.field-meta.xml
<CustomField>
    <fullName>GreeceCourseDate__c</fullName>
    <formula>course__r.GreeceCourseDate1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>תאריך קורס ביוון</label>
    <type>Date</type>
</CustomField>