force-app-modified/main/default/objects/Partecipant__c/fields/learning_method__c.field-meta.xml
<CustomField>
    <fullName>learning_method__c</fullName>
    <label>דרך לימוד</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>בכיתה</fullName>
            </value>
            <value>
                <fullName>לימוד עצמי</fullName>
            </value>
            <value>
                <fullName>קבוצה פרטית</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>