force-app-modified/main/default/objects/Partecipant__c/fields/MassUpdate__c.field-meta.xml
<CustomField>
    <fullName>MassUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>עדכון יזום</label>
    <type>Checkbox</type>
</CustomField>