force-app-modified/main/default/objects/Partecipant__c/fields/mobile__c.field-meta.xml
<CustomField>
    <fullName>mobile__c</fullName>
    <formula>Partecipant__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>נייד</label>
    <type>Text</type>
</CustomField>