force-app-modified/main/default/objects/Partecipant__c/fields/participant_emailparticipant_email__c.field-meta.xml
<CustomField>
    <fullName>participant_emailparticipant_email__c</fullName>
    <label>participant_email</label>
    <type>Email</type>
</CustomField>