force-app-modified/main/default/objects/Partecipant__c/fields/pass_OR_fail__c.field-meta.xml
<CustomField>
    <fullName>pass_OR_fail__c</fullName>
    <label>עבר/נכשל</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>עבר</fullName>
            </value>
            <value>
                <fullName>נכשל</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>