force-app-modified/main/default/objects/Partecipant__c/fields/payment_2__c.field-meta.xml
<CustomField>
    <fullName>payment_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>תשלום 2</label>
    <type>Checkbox</type>
</CustomField>