force-app-modified/main/default/objects/Partecipant__c/fields/photo__c.field-meta.xml
<CustomField>
    <fullName>photo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>מבוטל!</label>
    <type>Checkbox</type>
</CustomField>