force-app-modified/main/default/objects/Partecipant__c/fields/preparation__c.field-meta.xml
<CustomField>
    <fullName>preparation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>הכנה</label>
    <type>Checkbox</type>
</CustomField>