force-app-modified/main/default/objects/Partecipant__c/fields/test_fee__c.field-meta.xml
<CustomField>
    <fullName>test_fee__c</fullName>
    <label>אגרת מבחן</label>
    <length>10</length>
    <type>Text</type>
</CustomField>