force-app-modified/main/default/objects/Partecipant__c/fields/X10DaysAfterCourse__c.field-meta.xml
<CustomField>
    <fullName>X10DaysAfterCourse__c</fullName>
    <formula>if(  GreeceCourseDate__c +10=today(),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>10DaysAfterCourse</label>
    <type>Checkbox</type>
</CustomField>