force-app-modified/main/default/objects/Partecipant__c/recordTypes/GMDSS_CLASS.recordType-meta.xml
<RecordType>
    <fullName>GMDSS_CLASS</fullName>
    <active>true</active>
    <label>GMDSS בכיתה</label>
</RecordType>