force-app-modified/main/default/objects/Partecipant__c/recordTypes/GMDSS_Self_Learning.recordType-meta.xml
<RecordType>
    <fullName>GMDSS_Self_Learning</fullName>
    <active>true</active>
    <label>GMDSS לימוד עצמי</label>
</RecordType>