force-app-modified/main/default/objects/Partecipant__c/recordTypes/Greece_course_participant.recordType-meta.xml
<RecordType>
    <fullName>Greece_course_participant</fullName>
    <active>true</active>
    <label>קורס ביוון</label>
</RecordType>