force-app-modified/main/default/objects/Partecipant__c/recordTypes/Meshit30_practical.recordType-meta.xml
<RecordType>
    <fullName>Meshit30_practical</fullName>
    <active>true</active>
    <label>משיט 30 מעשי</label>
</RecordType>