force-app-modified/main/default/objects/Partecipant__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>course__c</columns>
    <columns>Partecipant__c</columns>
    <columns>Learning_Program__c</columns>
    <columns>pass_OR_fail__c</columns>
    <filterScope>Everything</filterScope>
    <label>הכול</label>
</ListView>